# lab_colorama_muffinized

./: README.md  backup.json  db.sqlite3  pyproject.toml
color_app/: apps.py  class_based_views.py  forms.py  models.py  urls.py  validators.py  views.py  widgets.py
color_app/fixtures/: wikipedia_colors.json
color_app/migrations/: 0001_initial.py
color_app/static/color_app/: offset_swatches.js  style.css
color_app/templates/: base.html
color_app/templates/color_app/: color_form.html  color_list.html  index.html  random_color.html  swatch.html
mysite/: settings.py  urls.py
